src/scss/styles.scss
//Font Imports
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@469&display=swap');
//PingFang
@font-face {
  font-family: 'PingFang';
  src: url('/src/assets/fonts/PingFangSCRegular.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  url('/src/assets/fonts/PingFangSCRegular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
}

@font-face {
  font-family: 'Soleil Bold';
  src: url('/src/assets/fonts/transat_medium-webfont.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  url('/src/assets/fonts/transat_medium-webfont.woff') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
}

@font-face {
  font-family: 'Brandon Grotesque Medium';
  src: url('/src/assets/fonts/SoleilW01Bold.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  url('/src/assets/fonts/SoleilW01Bold.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
}

@font-face {
  font-family: 'Fjalla One Regular';
  src: url('/src/assets/fonts/FjallaOne-Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
}

@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');


$primary: #71c8f0;
$secondary: #6666ad;
$accent: #b44c78;
$gray: #e8e9f0;
$dark: #333366;
$darker: #000033;


//Adding custom spacers to increase flexibility
$spacer: 1rem !default;
$spacers: (
        6: ($spacer * 4), //64px
        7: ($spacer * 5), //80px
        8: ($spacer * 6.25), //100px
        9: ($spacer * 7.5), //120px
        10: ($spacer * 9.375) //150px
);

//Design Adjustments
* {
  // box-sizing: border-box;
}

html, body {
  // max-width: 100vw;
  // overflow-x: hidden;

}


//Scrollbar
/*::-webkit-scrollbar {
  background-color: transparent;
  width: 12px;
}

::-webkit-scrollbar-thumb {
  background: linear-gradient(to top, $primary, rgba(21, 238, 1, 0.5));

  border-radius: 10px 10px 10px 10px;
  height: 50vh;

}*/

//Button Press Animation
button.btn.btn-primary {
  overflow: hidden;
  position: relative;

}

button.btn.btn-lang {
  background-color: transparent;
  border: none;



}


#button-animate {
  position: absolute;
  background: #fff;
  transform: translate(-50%, -50%);
  pointer-events: none;
  border-radius: 50%;
  animation: animate 1s linear infinite;
}

button.btn.btn-lang:focus {
  outline: 0;
}


@keyframes animate {
  0% {
    width: 0px;
    height: 0px;
    opacity: 0.5;
  }
  100% {
    width: 150px;
    height: 150px;
    opacity: 0.5;
  }
}


//Navbar


#nav-bar {
  top: 0;
  background-color: $darker;
  color: #ffffff;

  position: -webkit-sticky;
  position: fixed;
  width: 100%;
  z-index: 100;
  padding-left: 3vw;
  padding-right: 3vw;


}


//Navbar brand
#nav-bar .navbar-brand {
  color: white;
  padding-left: 3vw;
  font: bold 30px Poppins, sans-serif;
}
#logo-image{
  margin-right: -30px;
  margin-bottom: 15px;
}
#nav-bar .navbar-brand:hover { //What did I do to deserve this
  color: white;
}

#navbar-btn-toggle {
  width: 47px;
  height: 34px;
  background-color: #ffffff;
}

#navbar-btn-toggle .line {
  width: 100%;
  float: left;
  height: 3px;
  background-color: $darker;
  margin-bottom: 5px;
  border-radius: 1px 1px 1px 1px;
}

ul.dropdown-menu.dropdown-menu-left {
  color: white;
  background-color: $dark;
  left: 12px;
  top: 43px;
  border-radius: 0 0 3px 3px;
  width: 150px;
}

ul.dropdown-menu.dropdown-menu-left li a,
ul.dropdown-menu.dropdown-menu-left li button,
ul.dropdown-menu.dropdown-menu-left li h6 {
  color: white;
}

ul.dropdown-menu li a:hover, ul.dropdown-menu li button:hover {
  background-color: blueviolet; //TODO: Please change
}

a.nav-link, #en, #zh {
  color: white;
  font: 16px "Brandon Grotesque M", sans-serif;
 // display: inline-block;
  margin-top: 2px;

}
#zh{
  padding-right: 30px;

}


li.nav-item {
  padding-left: 0.5vw;
  padding-right: 0.5vw;



}

div.nav-vertical-divider {
  /*width: 2px;
  height: 20px;
  margin-top: 5px;
  background: white;*/

}



//Slider Language///////////
.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 26px;
}
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}
.slider {

  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #075AAA;
  -webkit-transition: .4s;
  transition: .4s;
}
#language-toggle-item{
  padding-top: 7px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 20px;
  width: 20px;
  left: 4px;
  bottom: 3px;
  background: url("/src/assets/uk_flag.png") center /cover;
  -webkit-transition: .4s;
  transition: .4s;
}
input:checked + .slider:before{
  background: url("/src/assets/chinese_flag.png") center /cover;
}

input:checked + .slider {
  background-color: #BD132D;
}




input:checked + .slider:before {
  -webkit-transform: translateX(18px);
  -ms-transform: translateX(18px);
  transform: translateX(18px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 5px;
}

.slider.round:before {
  border-radius: 10%;
}
/////////



a.fa {
  padding: 0;
  color: white;
}

div.social-media {
  padding-top: 9px;

}
div.social-media a icon{
  padding-left: 0;
  padding-right: 0;

}

#main-info {
  margin-top: 54px;
}

#main-info.alongside-sidebar, #sidebar {
  margin-top: 0px;
  padding-top: 54px;
}

#footer > * {
  padding-left: 11vw;
  padding-right: 11vw;
}


//************************//

.jumbotron {
  background-color: #ffffff !important;
  border-top: 3px solid rgb(219, 219, 219);
}


//SlideShow
.slideshow-container {
  position: relative;
}

.slide {
  display: none;
  overflow: hidden;
  width: 100%;
  height: 100vh;

}

.slideshow-container .slide img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  filter: brightness(50%);

}
/* ... */

